[package]
name = "tower-sessions-ext-memory-store"
description = "Memory session store. Not for direct use; see the `tower-sessions-ext` crate for details."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tower-sessions-ext-core = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tower-sessions-ext = { path = "../" }
